# ferro-wg

./: AGENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  features.json  install.sh  progress.md
.agents/skills/agent-harness/: SKILL.md
.agents/skills/rust-architect/: SKILL.md
.agents/skills/rust-code-reviewer/: SKILL.md
.agents/skills/rust-code-tester/: SKILL.md
.agents/skills/rust-code-writer/: SKILL.md
.agents/skills/rust-errors/: SKILL.md
.agents/skills/rust-team-lead/: SKILL.md
.claude/: settings.json
.claude/commands/: rust-crates.md
.claude/skills/code-writer/: SKILL.md
.claude/skills/rust-architect/: SKILL.md
.claude/skills/rust-axum-backend/: SKILL.md
.claude/skills/rust-code-reviewer/: SKILL.md
.claude/skills/rust-code-tester/: SKILL.md
.claude/skills/rust-frontend/: SKILL.md
.claude/skills/rust-team-lead/: SKILL.md
.github/workflows/: opencode-review  opencode-review.yml  rust.yml
docs/: cli-logs-implementation.md  phase-0-implementation.md  phase-1-implementation.md  phase-2-implementation.md  phase-3-implementation.md  phase-4-implementation.md  phase-5-implementation.md  phase-6-implementation.md  phase-7-implementation.md  tui-improvements.md  tui-multi-connection-redesign.md  tui-roadmap.md
ferro-wg/: Cargo.toml
ferro-wg-core/: Cargo.toml
ferro-wg-core/src/: client.rs  daemon.rs  error.rs  ipc.rs  key.rs  lib.rs  logs.rs  stats.rs
ferro-wg-core/src/backend/: boringtun.rs  gotatun.rs  mod.rs  neptun.rs
ferro-wg-core/src/config/: mod.rs  toml.rs  wg_quick.rs
ferro-wg-core/src/tunnel/: dns.rs  mod.rs  route.rs  tun_device.rs  udp.rs
ferro-wg-daemon/: Cargo.toml
ferro-wg-daemon/src/: main.rs  server.rs
ferro-wg-tui/: Cargo.toml
ferro-wg-tui-components/: Cargo.toml
ferro-wg-tui-components/benches/: log_parsing.rs
ferro-wg-tui-components/src/: compare.rs  config.rs  confirm_dialog.rs  connection_bar.rs  connection_filter_overlay.rs  diff_preview.rs  help_overlay.rs  lib.rs  logs.rs  overview.rs  peers.rs  status.rs  status_bar.rs  tab_bar.rs  toast.rs  util.rs
ferro-wg-tui-components/src/snapshots/: ferro_wg_tui_components__toast__tests__render_multiple_toasts.snap  ferro_wg_tui_components__toast__tests__render_no_toasts.snap  ferro_wg_tui_components__toast__tests__render_single_error_toast.snap  ferro_wg_tui_components__toast__tests__render_single_success_toast.snap  ferro_wg_tui_components__toast__tests__render_toast_truncated.snap
ferro-wg-tui-core/: Cargo.toml
ferro-wg-tui-core/src/: action.rs  app.rs  benchmark.rs  component.rs  config_edit.rs  lib.rs  state.rs  theme.rs  util.rs  ux.rs
ferro-wg-tui/src/: client.rs  event.rs  history.rs  lib.rs
ferro-wg/src/: cli.rs  client.rs  main.rs
ferro-wg/src/cmd/: logs.rs
ferro-wg/src/tui/: app.rs  mod.rs  ui.rs
