[workspace]
resolver = "3"
members = ["ferro-wg-core", "ferro-wg-tui-core", "ferro-wg", "ferro-wg-daemon"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Nathan Sculli"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/scull7/ferro-wg"

[workspace.lints.rust]
unsafe_code = "forbid"
