[package]
name = "ferro-wg-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WireGuard backend abstraction over boringtun, neptun, and gotatun"

[features]
default = []
boringtun = ["dep:boringtun"]
neptun = ["dep:neptun"]
gotatun = ["dep:gotatun"]

[dependencies]
# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }

# Time formatting
chrono = "0.4"

# Crypto key types (shared by all backends)
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
bytes = "1"

# Config parsing
toml = "0.8"

# IPC serialization
serde_json = "1"

# CLI parsing (for ValueEnum derive on LogLevel)
clap = { version = "4", features = ["derive"] }

# Async runtime + networking
tokio = { version = "1", features = ["net", "rt", "sync", "macros", "time", "io-util"] }

# Stream utilities
futures = "0.3"
tokio-stream = "0.1"

# TUN device
tun = { version = "0.8", features = ["async"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# WireGuard backends (feature-gated)
boringtun = { version = "0.7", optional = true }
neptun = { git = "https://github.com/NordSecurity/NepTUN", optional = true }
gotatun = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
