[package]
name = "ferro-wg-tui-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for the ferro-wg TUI: Component trait, Action, AppState, Theme"

[dependencies]
ferro-wg-core = { path = "../ferro-wg-core" }
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
humantime = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[lints]
workspace = true
