[package]
name = "ferro-wg"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WireGuard TUI and CLI with swappable backends for performance comparison"

[[bin]]
name = "ferro-wg"
path = "src/main.rs"

[features]
default = ["tui", "boringtun", "neptun", "gotatun"]
tui = ["dep:ferro-wg-tui"]
boringtun = ["ferro-wg-core/boringtun", "ferro-wg-tui?/boringtun"]
neptun = ["ferro-wg-core/neptun", "ferro-wg-tui?/neptun"]
gotatun = ["ferro-wg-core/gotatun", "ferro-wg-tui?/gotatun"]

[dependencies]
ferro-wg-core = { path = "../ferro-wg-core" }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
dirs = "6"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI (feature-gated)
ferro-wg-tui = { path = "../ferro-wg-tui", optional = true }

[lints]
workspace = true
